--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
 
 		<div class="row">
 			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
-				<label for="skills">Skill</label>
+				<label for="skill">Skill</label>
 				<input type="text" class="form-control" id="skill" name="skill" placeholder="Skills">
 			</div>
 		</div>
