--- a/register.html
+++ b/register.html
@@ -12,23 +12,23 @@
 			<h1 class="col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">Students Register</h1><br>
 		</div>
 	</br>
-	<form action="register.php" method="POST">
+	<form action="register.php" id="form" method="POST">
 		<div class="row">
 			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
 				<label for="name" class>Name</label>
-				<input type="text" class="form-control" id="name" name="name" placeholder="Name">
+				<input type="text" required title="You need to add name" class="form-control" id="name" name="name" placeholder="Name">
 			</div>
 		</div>
 		<div class="row">
 			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
 				<label for="email">Email Address</label>
-				<input type="email" class="form-control" id="email" name="email" placeholder="Email Address">
+				<input type="email" required title="This can't be blank" class="form-control" id="email" name="email" placeholder="Email Address">
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
-				<label for="password">Gender</label>
+				<label for="gender">Gender</label>
 				<select class="form-control" name="gender">
 					<option>Male</option>
 					<option>Female</option>
@@ -40,9 +40,16 @@
 		<div class="row">
 			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
 				<label for="password">Password</label>
-				<input type="password" class="form-control" id="password" name="password" placeholder="Password">
+				<input type="password" pattern=".{8,}" required title="password must be atleast 8 words" class="form-control" id="password" name="password" placeholder="Password"><span>Ettereres</span>
 			</div>
 		</div>
+		<div class="row">
+			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
+				<label for="confirm">Confirm Password</label>
+				<input type="password" pattern=".{8,}" required title="password must be atleast 8 words" class="form-control" id="confirm_password" placeholder="Password">
+							</div>
+		</div>
+	
 		<div class="row">
 			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
 				<label for="location">Location</label>
@@ -70,12 +77,12 @@
 		</div>
 		<div class="row">
 			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
-				<button type="submit" class="btn btn-primary">Submit</button>
+				<button type="submit" disabled id="btn_submit" class="btn btn-primary">Submit</button>
 			</div>
 		</form>
 	</div>
-
-
+	<script type="text/javascript" src="javascript/jquery.js"></script>
+	<script type="text/javascript" src="javascript/learn.js"></script>
 </body>
 </html>
 
