--- a/register.html
+++ b/register.html
@@ -11,7 +11,9 @@
 		<div class="row">
 			<h1 class="col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">Students Register</h1><br>
 		</div>
-	</br>
+		</br>
+
+		<div class="alert alert-danger col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3" role="alert">Sorry user already exist</div>
 	<form action="register.php" id="form" method="POST">
 		<div class="row">
 			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
@@ -40,14 +42,15 @@
 		<div class="row">
 			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
 				<label for="password">Password</label>
-				<input type="password" pattern=".{8,}" required title="password must be atleast 8 words" class="form-control" id="password" name="password" placeholder="Password"><span>Ettereres</span>
+				<input type="password" pattern=".{8,}" required title="password must be atleast 8 words" class="form-control" id="password" name="password" placeholder="Password">
 			</div>
 		</div>
 		<div class="row">
 			<div class="form-group col-xs-7 col-xs-offset-2  col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-lg-6 col-lg-offset-3">
 				<label for="confirm">Confirm Password</label>
 				<input type="password" pattern=".{8,}" required title="password must be atleast 8 words" class="form-control" id="confirm_password" placeholder="Password">
-							</div>
+				<span id="err" style="color:#F44336;">The two passwords should be match</span>
+						</div>
 		</div>
 	
 		<div class="row">
